samples/_failures_safe/1761376338_d6dd34_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_44548d7c.c: In function ‘main’:
./samples/SAFE/__tmp_44548d7c.c:147:20: error: missing terminating " character
  147 |             printf("\nStatus: System has
      |                    ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_44548d7c.c:147:13: error: expected expression at end of input
  147 |             printf("\nStatus: System has
      |             ^~~~~~
./samples/SAFE/__tmp_44548d7c.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_44548d7c.c:147:13: error: expected declaration or statement at end of input
